src/snapshots/denki__display__tests__energy_lines_kl135_power_and_total_only.snap
---
source: src/display.rs
expression: "format_energy_lines(&d).join(\"\\n\")"
---
Power:   9.00 W
Total:   500 Wh
